parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> pipeline_stage_1n
Rule 2     pipeline_stage_1n -> pipeline_stage pipeline_stage_1n
Rule 3     pipeline_stage_1n -> <empty>
Rule 4     pipeline_stage -> splitter
Rule 5     pipeline_stage -> filter
Rule 6     pipeline_stage -> composite_filter
Rule 7     pipeline_stage -> branch
Rule 8     pipeline_stage -> ungrouper
Rule 9     pipeline_stage -> grouper
Rule 10    pipeline_stage -> group_filter
Rule 11    pipeline_stage -> merger
Rule 12    splitter -> splitterKeyword id { }
Rule 13    filter -> filterKeyword id { filter_rule_1n }
Rule 14    composite_filter -> filterKeyword id { filter_ref_rule_1n }
Rule 15    group_filter -> groupFilterKeyword id { filter_rule_1n }
Rule 16    filter_rule_1n -> filter_rule filter_rule_1n
Rule 17    filter_rule_1n -> <empty>
Rule 18    filter_rule -> or_rule
Rule 19    filter_ref_rule_1n -> filter_ref_rule filter_ref_rule_1n
Rule 20    filter_ref_rule_1n -> filter_ref_rule
Rule 21    filter_ref_rule -> or_id
Rule 22    or_id -> not_id opt_or_id
Rule 23    opt_or_id -> ORKeyword not_id opt_or_id
Rule 24    opt_or_id -> <empty>
Rule 25    not_id -> NOTKeyword id
Rule 26    not_id -> id
Rule 27    or_rule -> rule_or_not opt_rule
Rule 28    opt_rule -> ORKeyword rule_or_not opt_rule
Rule 29    opt_rule -> <empty>
Rule 30    rule_or_not -> rule
Rule 31    rule_or_not -> NOTKeyword rule
Rule 32    rule -> infix_rule
Rule 33    rule -> prefix_rule
Rule 34    infix_rule -> arg op arg
Rule 35    op -> EQ
Rule 36    op -> LT
Rule 37    op -> GT
Rule 38    op -> LTEQ
Rule 39    op -> GTEQ
Rule 40    op -> ML
Rule 41    op -> MG
Rule 42    op -> inKeyword
Rule 43    op -> notinKeyword
Rule 44    prefix_rule -> id ( args )
Rule 45    prefix_rule -> bitANDKeyword ( args )
Rule 46    prefix_rule -> bitORKeyword ( args )
Rule 47    args -> arg , args
Rule 48    args -> arg
Rule 49    args -> <empty>
Rule 50    arg -> id
Rule 51    arg -> IPv4
Rule 52    arg -> IPv6
Rule 53    arg -> CIDR
Rule 54    arg -> MAC
Rule 55    arg -> int
Rule 56    arg -> float
Rule 57    arg -> hex
Rule 58    arg -> prefix_rule
Rule 59    arg -> string
Rule 60    CIDR -> IPv4 / int
Rule 61    CIDR -> IPv6 / int
Rule 62    branch -> id arrow mid_branch
Rule 63    branch -> string arrow mid_branch
Rule 64    branch -> id branchKeyword mid_branch
Rule 65    mid_branch -> id arrow mid_branch
Rule 66    mid_branch -> end_branch
Rule 67    end_branch -> id
Rule 68    end_branch -> string
Rule 69    arrow -> - GT
Rule 70    ungrouper -> ungrouperKeyword id { }
Rule 71    grouper -> grouperKeyword id { module1_n aggregate }
Rule 72    module1_n -> module module1_n
Rule 73    module1_n -> <empty>
Rule 74    module -> moduleKeyword id { grouper_rule1_n }
Rule 75    grouper_rule1_n -> grouper_rule grouper_rule1_n
Rule 76    grouper_rule1_n -> <empty>
Rule 77    grouper_rule -> id grouper_op id
Rule 78    grouper_rule -> id grouper_op id deltaKeyword delta_arg
Rule 79    grouper_rule -> id grouper_op id rdeltaKeyword delta_arg
Rule 80    grouper_op -> EQ
Rule 81    grouper_op -> LT
Rule 82    grouper_op -> GT
Rule 83    grouper_op -> GTEQ
Rule 84    grouper_op -> LTEQ
Rule 85    delta_arg -> time
Rule 86    delta_arg -> int
Rule 87    time -> int sKeyword
Rule 88    time -> int msKeyword
Rule 89    time -> int minKeyword
Rule 90    aggregate -> aggregateKeyword aggr1_n
Rule 91    aggr1_n -> aggr opt_aggr
Rule 92    opt_aggr -> , aggr opt_aggr
Rule 93    opt_aggr -> <empty>
Rule 94    aggr -> aggr_op ( id_or_qid ) asKeyword id
Rule 95    aggr -> id_or_qid asKeyword id
Rule 96    aggr -> id_or_qid
Rule 97    qid -> id . id
Rule 98    id_or_qid -> id
Rule 99    id_or_qid -> qid
Rule 100   aggr_op -> minKeyword
Rule 101   aggr_op -> maxKeyword
Rule 102   aggr_op -> sumKeyword
Rule 103   aggr_op -> avgKeyword
Rule 104   aggr_op -> unionKeyword
Rule 105   aggr_op -> countKeyword
Rule 106   aggr_op -> bitANDKeyword
Rule 107   aggr_op -> bitORKeyword
Rule 108   merger -> mergerKeyword id { merger_module1_n export }
Rule 109   merger_module1_n -> merger_module merger_module1_n
Rule 110   merger_module1_n -> <empty>
Rule 111   merger_module -> moduleKeyword id { merger_branches merger_rule1_n }
Rule 112   merger_branches -> branchesKeyword branches1_n
Rule 113   branches1_n -> id , branches1_n
Rule 114   branches1_n -> id
Rule 115   export -> exportKeyword id
Rule 116   merger_rule1_n -> merger_rule merger_rule1_n
Rule 117   merger_rule1_n -> <empty>
Rule 118   merger_rule -> merger_prefix_rule
Rule 119   merger_rule -> merger_infix_rule
Rule 120   merger_rule -> NOTKeyword merger_prefix_rule
Rule 121   merger_rule -> NOTKeyword merger_infix_rule
Rule 122   merger_infix_rule -> qid_arg op qid_arg
Rule 123   merger_prefix_rule -> id ( qid_args )
Rule 124   qid_args -> qid_arg , qid_args
Rule 125   qid_args -> qid_arg
Rule 126   qid_args -> <empty>
Rule 127   qid_arg -> qid
Rule 128   qid_arg -> IPv4
Rule 129   qid_arg -> IPv6
Rule 130   qid_arg -> CIDR
Rule 131   qid_arg -> MAC
Rule 132   qid_arg -> int
Rule 133   qid_arg -> float
Rule 134   qid_arg -> hex
Rule 135   qid_arg -> merger_prefix_rule
Rule 136   qid_arg -> string
Rule 137   merger_rule -> allen_rule opt_or_allen_rule
Rule 138   opt_or_allen_rule -> ORKeyword allen_rule opt_or_allen_rule
Rule 139   opt_or_allen_rule -> <empty>
Rule 140   allen_rule -> id allen_op id opt_allen_delta
Rule 141   opt_allen_delta -> deltaKeyword time
Rule 142   opt_allen_delta -> <empty>
Rule 143   allen_op -> LT
Rule 144   allen_op -> GT
Rule 145   allen_op -> EQ
Rule 146   allen_op -> mKeyword
Rule 147   allen_op -> miKeyword
Rule 148   allen_op -> oKeyword
Rule 149   allen_op -> oiKeyword
Rule 150   allen_op -> sKeyword
Rule 151   allen_op -> siKeyword
Rule 152   allen_op -> dKeyword
Rule 153   allen_op -> diKeyword
Rule 154   allen_op -> fKeyword
Rule 155   allen_op -> fiKeyword
Rule 156   allen_op -> eqKeyword

Terminals, with rules where they appear

(                    : 44 45 46 94 123
)                    : 44 45 46 94 123
,                    : 47 92 113 124
-                    : 69
.                    : 97
/                    : 60 61
EQ                   : 35 80 145
GT                   : 37 69 82 144
GTEQ                 : 39 83
IPv4                 : 51 60 128
IPv6                 : 52 61 129
LT                   : 36 81 143
LTEQ                 : 38 84
MAC                  : 54 131
MG                   : 41
ML                   : 40
NOTKeyword           : 25 31 120 121
ORKeyword            : 23 28 138
aggregateKeyword     : 90
asKeyword            : 94 95
avgKeyword           : 103
bitANDKeyword        : 45 106
bitORKeyword         : 46 107
branchKeyword        : 64
branchesKeyword      : 112
countKeyword         : 105
dKeyword             : 152
deltaKeyword         : 78 141
diKeyword            : 153
eqKeyword            : 156
error                : 
exportKeyword        : 115
fKeyword             : 154
fiKeyword            : 155
filterKeyword        : 13 14
float                : 56 133
groupFilterKeyword   : 15
grouperKeyword       : 71
hex                  : 57 134
id                   : 12 13 14 15 25 26 44 50 62 64 65 67 70 71 74 77 77 78 78 79 79 94 95 97 97 98 108 111 113 114 115 123 140 140
inKeyword            : 42
int                  : 55 60 61 86 87 88 89 132
mKeyword             : 146
maxKeyword           : 101
mergerKeyword        : 108
miKeyword            : 147
minKeyword           : 89 100
moduleKeyword        : 74 111
msKeyword            : 88
notinKeyword         : 43
oKeyword             : 148
oiKeyword            : 149
rdeltaKeyword        : 79
sKeyword             : 87 150
siKeyword            : 151
splitterKeyword      : 12
string               : 59 63 68 136
sumKeyword           : 102
ungrouperKeyword     : 70
unionKeyword         : 104
{                    : 12 13 14 15 70 71 74 108 111
}                    : 12 13 14 15 70 71 74 108 111

Nonterminals, with rules where they appear

CIDR                 : 53 130
aggr                 : 91 92
aggr1_n              : 90
aggr_op              : 94
aggregate            : 71
allen_op             : 140
allen_rule           : 137 138
arg                  : 34 34 47 48
args                 : 44 45 46 47
arrow                : 62 63 65
branch               : 7
branches1_n          : 112 113
composite_filter     : 6
delta_arg            : 78 79
end_branch           : 66
export               : 108
file                 : 0
filter               : 5
filter_ref_rule      : 19 20
filter_ref_rule_1n   : 14 19
filter_rule          : 16
filter_rule_1n       : 13 15 16
group_filter         : 10
grouper              : 9
grouper_op           : 77 78 79
grouper_rule         : 75
grouper_rule1_n      : 74 75
id_or_qid            : 94 95 96
infix_rule           : 32
merger               : 11
merger_branches      : 111
merger_infix_rule    : 119 121
merger_module        : 109
merger_module1_n     : 108 109
merger_prefix_rule   : 118 120 135
merger_rule          : 116
merger_rule1_n       : 111 116
mid_branch           : 62 63 64 65
module               : 72
module1_n            : 71 72
not_id               : 22 23
op                   : 34 122
opt_aggr             : 91 92
opt_allen_delta      : 140
opt_or_allen_rule    : 137 138
opt_or_id            : 22 23
opt_rule             : 27 28
or_id                : 21
or_rule              : 18
pipeline_stage       : 2
pipeline_stage_1n    : 1 2
prefix_rule          : 33 58
qid                  : 99 127
qid_arg              : 122 122 124 125
qid_args             : 123 124
rule                 : 30 31
rule_or_not          : 27 28
splitter             : 4
time                 : 85 141
ungrouper            : 8

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . pipeline_stage_1n
    (2) pipeline_stage_1n -> . pipeline_stage pipeline_stage_1n
    (3) pipeline_stage_1n -> .
    (4) pipeline_stage -> . splitter
    (5) pipeline_stage -> . filter
    (6) pipeline_stage -> . composite_filter
    (7) pipeline_stage -> . branch
    (8) pipeline_stage -> . ungrouper
    (9) pipeline_stage -> . grouper
    (10) pipeline_stage -> . group_filter
    (11) pipeline_stage -> . merger
    (12) splitter -> . splitterKeyword id { }
    (13) filter -> . filterKeyword id { filter_rule_1n }
    (14) composite_filter -> . filterKeyword id { filter_ref_rule_1n }
    (62) branch -> . id arrow mid_branch
    (63) branch -> . string arrow mid_branch
    (64) branch -> . id branchKeyword mid_branch
    (70) ungrouper -> . ungrouperKeyword id { }
    (71) grouper -> . grouperKeyword id { module1_n aggregate }
    (15) group_filter -> . groupFilterKeyword id { filter_rule_1n }
    (108) merger -> . mergerKeyword id { merger_module1_n export }

    $end            reduce using rule 3 (pipeline_stage_1n -> .)
    splitterKeyword shift and go to state 10
    filterKeyword   shift and go to state 9
    id              shift and go to state 5
    string          shift and go to state 13
    ungrouperKeyword shift and go to state 15
    grouperKeyword  shift and go to state 4
    groupFilterKeyword shift and go to state 17
    mergerKeyword   shift and go to state 14

    splitter                       shift and go to state 16
    branch                         shift and go to state 11
    ungrouper                      shift and go to state 6
    grouper                        shift and go to state 7
    merger                         shift and go to state 8
    pipeline_stage                 shift and go to state 1
    group_filter                   shift and go to state 2
    filter                         shift and go to state 18
    composite_filter               shift and go to state 19
    file                           shift and go to state 3
    pipeline_stage_1n              shift and go to state 12

state 1

    (2) pipeline_stage_1n -> pipeline_stage . pipeline_stage_1n
    (2) pipeline_stage_1n -> . pipeline_stage pipeline_stage_1n
    (3) pipeline_stage_1n -> .
    (4) pipeline_stage -> . splitter
    (5) pipeline_stage -> . filter
    (6) pipeline_stage -> . composite_filter
    (7) pipeline_stage -> . branch
    (8) pipeline_stage -> . ungrouper
    (9) pipeline_stage -> . grouper
    (10) pipeline_stage -> . group_filter
    (11) pipeline_stage -> . merger
    (12) splitter -> . splitterKeyword id { }
    (13) filter -> . filterKeyword id { filter_rule_1n }
    (14) composite_filter -> . filterKeyword id { filter_ref_rule_1n }
    (62) branch -> . id arrow mid_branch
    (63) branch -> . string arrow mid_branch
    (64) branch -> . id branchKeyword mid_branch
    (70) ungrouper -> . ungrouperKeyword id { }
    (71) grouper -> . grouperKeyword id { module1_n aggregate }
    (15) group_filter -> . groupFilterKeyword id { filter_rule_1n }
    (108) merger -> . mergerKeyword id { merger_module1_n export }

    $end            reduce using rule 3 (pipeline_stage_1n -> .)
    splitterKeyword shift and go to state 10
    filterKeyword   shift and go to state 9
    id              shift and go to state 5
    string          shift and go to state 13
    ungrouperKeyword shift and go to state 15
    grouperKeyword  shift and go to state 4
    groupFilterKeyword shift and go to state 17
    mergerKeyword   shift and go to state 14

    splitter                       shift and go to state 16
    ungrouper                      shift and go to state 6
    grouper                        shift and go to state 7
    merger                         shift and go to state 8
    pipeline_stage                 shift and go to state 1
    group_filter                   shift and go to state 2
    filter                         shift and go to state 18
    composite_filter               shift and go to state 19
    branch                         shift and go to state 11
    pipeline_stage_1n              shift and go to state 20

state 2

    (10) pipeline_stage -> group_filter .

    splitterKeyword reduce using rule 10 (pipeline_stage -> group_filter .)
    filterKeyword   reduce using rule 10 (pipeline_stage -> group_filter .)
    id              reduce using rule 10 (pipeline_stage -> group_filter .)
    string          reduce using rule 10 (pipeline_stage -> group_filter .)
    ungrouperKeyword reduce using rule 10 (pipeline_stage -> group_filter .)
    grouperKeyword  reduce using rule 10 (pipeline_stage -> group_filter .)
    groupFilterKeyword reduce using rule 10 (pipeline_stage -> group_filter .)
    mergerKeyword   reduce using rule 10 (pipeline_stage -> group_filter .)
    $end            reduce using rule 10 (pipeline_stage -> group_filter .)


state 3

    (0) S' -> file .



state 4

    (71) grouper -> grouperKeyword . id { module1_n aggregate }

    id              shift and go to state 21


state 5

    (62) branch -> id . arrow mid_branch
    (64) branch -> id . branchKeyword mid_branch
    (69) arrow -> . - GT

    branchKeyword   shift and go to state 24
    -               shift and go to state 22

    arrow                          shift and go to state 23

state 6

    (8) pipeline_stage -> ungrouper .

    splitterKeyword reduce using rule 8 (pipeline_stage -> ungrouper .)
    filterKeyword   reduce using rule 8 (pipeline_stage -> ungrouper .)
    id              reduce using rule 8 (pipeline_stage -> ungrouper .)
    string          reduce using rule 8 (pipeline_stage -> ungrouper .)
    ungrouperKeyword reduce using rule 8 (pipeline_stage -> ungrouper .)
    grouperKeyword  reduce using rule 8 (pipeline_stage -> ungrouper .)
    groupFilterKeyword reduce using rule 8 (pipeline_stage -> ungrouper .)
    mergerKeyword   reduce using rule 8 (pipeline_stage -> ungrouper .)
    $end            reduce using rule 8 (pipeline_stage -> ungrouper .)


state 7

    (9) pipeline_stage -> grouper .

    splitterKeyword reduce using rule 9 (pipeline_stage -> grouper .)
    filterKeyword   reduce using rule 9 (pipeline_stage -> grouper .)
    id              reduce using rule 9 (pipeline_stage -> grouper .)
    string          reduce using rule 9 (pipeline_stage -> grouper .)
    ungrouperKeyword reduce using rule 9 (pipeline_stage -> grouper .)
    grouperKeyword  reduce using rule 9 (pipeline_stage -> grouper .)
    groupFilterKeyword reduce using rule 9 (pipeline_stage -> grouper .)
    mergerKeyword   reduce using rule 9 (pipeline_stage -> grouper .)
    $end            reduce using rule 9 (pipeline_stage -> grouper .)


state 8

    (11) pipeline_stage -> merger .

    splitterKeyword reduce using rule 11 (pipeline_stage -> merger .)
    filterKeyword   reduce using rule 11 (pipeline_stage -> merger .)
    id              reduce using rule 11 (pipeline_stage -> merger .)
    string          reduce using rule 11 (pipeline_stage -> merger .)
    ungrouperKeyword reduce using rule 11 (pipeline_stage -> merger .)
    grouperKeyword  reduce using rule 11 (pipeline_stage -> merger .)
    groupFilterKeyword reduce using rule 11 (pipeline_stage -> merger .)
    mergerKeyword   reduce using rule 11 (pipeline_stage -> merger .)
    $end            reduce using rule 11 (pipeline_stage -> merger .)


state 9

    (13) filter -> filterKeyword . id { filter_rule_1n }
    (14) composite_filter -> filterKeyword . id { filter_ref_rule_1n }

    id              shift and go to state 25


state 10

    (12) splitter -> splitterKeyword . id { }

    id              shift and go to state 26


state 11

    (7) pipeline_stage -> branch .

    splitterKeyword reduce using rule 7 (pipeline_stage -> branch .)
    filterKeyword   reduce using rule 7 (pipeline_stage -> branch .)
    id              reduce using rule 7 (pipeline_stage -> branch .)
    string          reduce using rule 7 (pipeline_stage -> branch .)
    ungrouperKeyword reduce using rule 7 (pipeline_stage -> branch .)
    grouperKeyword  reduce using rule 7 (pipeline_stage -> branch .)
    groupFilterKeyword reduce using rule 7 (pipeline_stage -> branch .)
    mergerKeyword   reduce using rule 7 (pipeline_stage -> branch .)
    $end            reduce using rule 7 (pipeline_stage -> branch .)


state 12

    (1) file -> pipeline_stage_1n .

    $end            reduce using rule 1 (file -> pipeline_stage_1n .)


state 13

    (63) branch -> string . arrow mid_branch
    (69) arrow -> . - GT

    -               shift and go to state 22

    arrow                          shift and go to state 27

state 14

    (108) merger -> mergerKeyword . id { merger_module1_n export }

    id              shift and go to state 28


state 15

    (70) ungrouper -> ungrouperKeyword . id { }

    id              shift and go to state 29


state 16

    (4) pipeline_stage -> splitter .

    splitterKeyword reduce using rule 4 (pipeline_stage -> splitter .)
    filterKeyword   reduce using rule 4 (pipeline_stage -> splitter .)
    id              reduce using rule 4 (pipeline_stage -> splitter .)
    string          reduce using rule 4 (pipeline_stage -> splitter .)
    ungrouperKeyword reduce using rule 4 (pipeline_stage -> splitter .)
    grouperKeyword  reduce using rule 4 (pipeline_stage -> splitter .)
    groupFilterKeyword reduce using rule 4 (pipeline_stage -> splitter .)
    mergerKeyword   reduce using rule 4 (pipeline_stage -> splitter .)
    $end            reduce using rule 4 (pipeline_stage -> splitter .)


state 17

    (15) group_filter -> groupFilterKeyword . id { filter_rule_1n }

    id              shift and go to state 30


state 18

    (5) pipeline_stage -> filter .

    splitterKeyword reduce using rule 5 (pipeline_stage -> filter .)
    filterKeyword   reduce using rule 5 (pipeline_stage -> filter .)
    id              reduce using rule 5 (pipeline_stage -> filter .)
    string          reduce using rule 5 (pipeline_stage -> filter .)
    ungrouperKeyword reduce using rule 5 (pipeline_stage -> filter .)
    grouperKeyword  reduce using rule 5 (pipeline_stage -> filter .)
    groupFilterKeyword reduce using rule 5 (pipeline_stage -> filter .)
    mergerKeyword   reduce using rule 5 (pipeline_stage -> filter .)
    $end            reduce using rule 5 (pipeline_stage -> filter .)


state 19

    (6) pipeline_stage -> composite_filter .

    splitterKeyword reduce using rule 6 (pipeline_stage -> composite_filter .)
    filterKeyword   reduce using rule 6 (pipeline_stage -> composite_filter .)
    id              reduce using rule 6 (pipeline_stage -> composite_filter .)
    string          reduce using rule 6 (pipeline_stage -> composite_filter .)
    ungrouperKeyword reduce using rule 6 (pipeline_stage -> composite_filter .)
    grouperKeyword  reduce using rule 6 (pipeline_stage -> composite_filter .)
    groupFilterKeyword reduce using rule 6 (pipeline_stage -> composite_filter .)
    mergerKeyword   reduce using rule 6 (pipeline_stage -> composite_filter .)
    $end            reduce using rule 6 (pipeline_stage -> composite_filter .)


state 20

    (2) pipeline_stage_1n -> pipeline_stage pipeline_stage_1n .

    $end            reduce using rule 2 (pipeline_stage_1n -> pipeline_stage pipeline_stage_1n .)


state 21

    (71) grouper -> grouperKeyword id . { module1_n aggregate }

    {               shift and go to state 31


state 22

    (69) arrow -> - . GT

    GT              shift and go to state 32


state 23

    (62) branch -> id arrow . mid_branch
    (65) mid_branch -> . id arrow mid_branch
    (66) mid_branch -> . end_branch
    (67) end_branch -> . id
    (68) end_branch -> . string

    id              shift and go to state 35
    string          shift and go to state 34

    end_branch                     shift and go to state 33
    mid_branch                     shift and go to state 36

state 24

    (64) branch -> id branchKeyword . mid_branch
    (65) mid_branch -> . id arrow mid_branch
    (66) mid_branch -> . end_branch
    (67) end_branch -> . id
    (68) end_branch -> . string

    id              shift and go to state 35
    string          shift and go to state 34

    end_branch                     shift and go to state 33
    mid_branch                     shift and go to state 37

state 25

    (13) filter -> filterKeyword id . { filter_rule_1n }
    (14) composite_filter -> filterKeyword id . { filter_ref_rule_1n }

    {               shift and go to state 38


state 26

    (12) splitter -> splitterKeyword id . { }

    {               shift and go to state 39


state 27

    (63) branch -> string arrow . mid_branch
    (65) mid_branch -> . id arrow mid_branch
    (66) mid_branch -> . end_branch
    (67) end_branch -> . id
    (68) end_branch -> . string

    id              shift and go to state 35
    string          shift and go to state 34

    end_branch                     shift and go to state 33
    mid_branch                     shift and go to state 40

state 28

    (108) merger -> mergerKeyword id . { merger_module1_n export }

    {               shift and go to state 41


state 29

    (70) ungrouper -> ungrouperKeyword id . { }

    {               shift and go to state 42


state 30

    (15) group_filter -> groupFilterKeyword id . { filter_rule_1n }

    {               shift and go to state 43


state 31

    (71) grouper -> grouperKeyword id { . module1_n aggregate }
    (72) module1_n -> . module module1_n
    (73) module1_n -> .
    (74) module -> . moduleKeyword id { grouper_rule1_n }

    aggregateKeyword reduce using rule 73 (module1_n -> .)
    moduleKeyword   shift and go to state 44

    module1_n                      shift and go to state 45
    module                         shift and go to state 46

state 32

    (69) arrow -> - GT .

    id              reduce using rule 69 (arrow -> - GT .)
    string          reduce using rule 69 (arrow -> - GT .)


state 33

    (66) mid_branch -> end_branch .

    splitterKeyword reduce using rule 66 (mid_branch -> end_branch .)
    filterKeyword   reduce using rule 66 (mid_branch -> end_branch .)
    id              reduce using rule 66 (mid_branch -> end_branch .)
    string          reduce using rule 66 (mid_branch -> end_branch .)
    ungrouperKeyword reduce using rule 66 (mid_branch -> end_branch .)
    grouperKeyword  reduce using rule 66 (mid_branch -> end_branch .)
    groupFilterKeyword reduce using rule 66 (mid_branch -> end_branch .)
    mergerKeyword   reduce using rule 66 (mid_branch -> end_branch .)
    $end            reduce using rule 66 (mid_branch -> end_branch .)


state 34

    (68) end_branch -> string .

    splitterKeyword reduce using rule 68 (end_branch -> string .)
    filterKeyword   reduce using rule 68 (end_branch -> string .)
    id              reduce using rule 68 (end_branch -> string .)
    string          reduce using rule 68 (end_branch -> string .)
    ungrouperKeyword reduce using rule 68 (end_branch -> string .)
    grouperKeyword  reduce using rule 68 (end_branch -> string .)
    groupFilterKeyword reduce using rule 68 (end_branch -> string .)
    mergerKeyword   reduce using rule 68 (end_branch -> string .)
    $end            reduce using rule 68 (end_branch -> string .)


state 35

    (65) mid_branch -> id . arrow mid_branch
    (67) end_branch -> id .
    (69) arrow -> . - GT

    splitterKeyword reduce using rule 67 (end_branch -> id .)
    filterKeyword   reduce using rule 67 (end_branch -> id .)
    id              reduce using rule 67 (end_branch -> id .)
    string          reduce using rule 67 (end_branch -> id .)
    ungrouperKeyword reduce using rule 67 (end_branch -> id .)
    grouperKeyword  reduce using rule 67 (end_branch -> id .)
    groupFilterKeyword reduce using rule 67 (end_branch -> id .)
    mergerKeyword   reduce using rule 67 (end_branch -> id .)
    $end            reduce using rule 67 (end_branch -> id .)
    -               shift and go to state 22

    arrow                          shift and go to state 47

state 36

    (62) branch -> id arrow mid_branch .

    splitterKeyword reduce using rule 62 (branch -> id arrow mid_branch .)
    filterKeyword   reduce using rule 62 (branch -> id arrow mid_branch .)
    id              reduce using rule 62 (branch -> id arrow mid_branch .)
    string          reduce using rule 62 (branch -> id arrow mid_branch .)
    ungrouperKeyword reduce using rule 62 (branch -> id arrow mid_branch .)
    grouperKeyword  reduce using rule 62 (branch -> id arrow mid_branch .)
    groupFilterKeyword reduce using rule 62 (branch -> id arrow mid_branch .)
    mergerKeyword   reduce using rule 62 (branch -> id arrow mid_branch .)
    $end            reduce using rule 62 (branch -> id arrow mid_branch .)


state 37

    (64) branch -> id branchKeyword mid_branch .

    splitterKeyword reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    filterKeyword   reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    id              reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    string          reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    ungrouperKeyword reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    grouperKeyword  reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    groupFilterKeyword reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    mergerKeyword   reduce using rule 64 (branch -> id branchKeyword mid_branch .)
    $end            reduce using rule 64 (branch -> id branchKeyword mid_branch .)


state 38

    (13) filter -> filterKeyword id { . filter_rule_1n }
    (14) composite_filter -> filterKeyword id { . filter_ref_rule_1n }
    (16) filter_rule_1n -> . filter_rule filter_rule_1n
    (17) filter_rule_1n -> .
    (19) filter_ref_rule_1n -> . filter_ref_rule filter_ref_rule_1n
    (20) filter_ref_rule_1n -> . filter_ref_rule
    (18) filter_rule -> . or_rule
    (21) filter_ref_rule -> . or_id
    (27) or_rule -> . rule_or_not opt_rule
    (22) or_id -> . not_id opt_or_id
    (30) rule_or_not -> . rule
    (31) rule_or_not -> . NOTKeyword rule
    (25) not_id -> . NOTKeyword id
    (26) not_id -> . id
    (32) rule -> . infix_rule
    (33) rule -> . prefix_rule
    (34) infix_rule -> . arg op arg
    (44) prefix_rule -> . id ( args )
    (45) prefix_rule -> . bitANDKeyword ( args )
    (46) prefix_rule -> . bitORKeyword ( args )
    (50) arg -> . id
    (51) arg -> . IPv4
    (52) arg -> . IPv6
    (53) arg -> . CIDR
    (54) arg -> . MAC
    (55) arg -> . int
    (56) arg -> . float
    (57) arg -> . hex
    (58) arg -> . prefix_rule
    (59) arg -> . string
    (60) CIDR -> . IPv4 / int
    (61) CIDR -> . IPv6 / int

    }               reduce using rule 17 (filter_rule_1n -> .)
    NOTKeyword      shift and go to state 57
    id              shift and go to state 56
    bitANDKeyword   shift and go to state 48
    bitORKeyword    shift and go to state 58
    IPv4            shift and go to state 70
    IPv6            shift and go to state 71
    MAC             shift and go to state 68
    int             shift and go to state 51
    float           shift and go to state 52
    hex             shift and go to state 60
    string          shift and go to state 62

    filter_ref_rule_1n             shift and go to state 49
    or_rule                        shift and go to state 50
    filter_rule                    shift and go to state 59
    not_id                         shift and go to state 66
    or_id                          shift and go to state 63
    rule                           shift and go to state 67
    infix_rule                     shift and go to state 53
    rule_or_not                    shift and go to state 69
    prefix_rule                    shift and go to state 54
    arg                            shift and go to state 55
    filter_rule_1n                 shift and go to state 64
    CIDR                           shift and go to state 65
    filter_ref_rule                shift and go to state 61

state 39

    (12) splitter -> splitterKeyword id { . }

    }               shift and go to state 72


state 40

    (63) branch -> string arrow mid_branch .

    splitterKeyword reduce using rule 63 (branch -> string arrow mid_branch .)
    filterKeyword   reduce using rule 63 (branch -> string arrow mid_branch .)
    id              reduce using rule 63 (branch -> string arrow mid_branch .)
    string          reduce using rule 63 (branch -> string arrow mid_branch .)
    ungrouperKeyword reduce using rule 63 (branch -> string arrow mid_branch .)
    grouperKeyword  reduce using rule 63 (branch -> string arrow mid_branch .)
    groupFilterKeyword reduce using rule 63 (branch -> string arrow mid_branch .)
    mergerKeyword   reduce using rule 63 (branch -> string arrow mid_branch .)
    $end            reduce using rule 63 (branch -> string arrow mid_branch .)


state 41

    (108) merger -> mergerKeyword id { . merger_module1_n export }
    (109) merger_module1_n -> . merger_module merger_module1_n
    (110) merger_module1_n -> .
    (111) merger_module -> . moduleKeyword id { merger_branches merger_rule1_n }

    exportKeyword   reduce using rule 110 (merger_module1_n -> .)
    moduleKeyword   shift and go to state 75

    merger_module                  shift and go to state 73
    merger_module1_n               shift and go to state 74

state 42

    (70) ungrouper -> ungrouperKeyword id { . }

    }               shift and go to state 76


state 43

    (15) group_filter -> groupFilterKeyword id { . filter_rule_1n }
    (16) filter_rule_1n -> . filter_rule filter_rule_1n
    (17) filter_rule_1n -> .
    (18) filter_rule -> . or_rule
    (27) or_rule -> . rule_or_not opt_rule
    (30) rule_or_not -> . rule
    (31) rule_or_not -> . NOTKeyword rule
    (32) rule -> . infix_rule
    (33) rule -> . prefix_rule
    (34) infix_rule -> . arg op arg
    (44) prefix_rule -> . id ( args )
    (45) prefix_rule -> . bitANDKeyword ( args )
    (46) prefix_rule -> . bitORKeyword ( args )
    (50) arg -> . id
    (51) arg -> . IPv4
    (52) arg -> . IPv6
    (53) arg -> . CIDR
    (54) arg -> . MAC
    (55) arg -> . int
    (56) arg -> . float
    (57) arg -> . hex
    (58) arg -> . prefix_rule
    (59) arg -> . string
    (60) CIDR -> . IPv4 / int
    (61) CIDR -> . IPv6 / int

    }               reduce using rule 17 (filter_rule_1n -> .)
    NOTKeyword      shift and go to state 78
    id              shift and go to state 77
    bitANDKeyword   shift and go to state 48
    bitORKeyword    shift and go to state 58
    IPv4            shift and go to state 70
    IPv6            shift and go to state 71
    MAC             shift and go to state 68
    int             shift and go to state 51
    float           shift and go to state 52
    hex             shift and go to state 60
    string          shift and go to state 62

    or_rule                        shift and go to state 50
    filter_rule                    shift and go to state 59
    rule                           shift and go to state 67
    infix_rule                     shift and go to state 53
    rule_or_not                    shift and go to state 69
    prefix_rule                    shift and go to state 54
    arg                            shift and go to state 55
    filter_rule_1n                 shift and go to state 79
    CIDR                           shift and go to state 65

state 44

    (74) module -> moduleKeyword . id { grouper_rule1_n }

    id              shift and go to state 80


state 45

    (71) grouper -> grouperKeyword id { module1_n . aggregate }
    (90) aggregate -> . aggregateKeyword aggr1_n

    aggregateKeyword shift and go to state 81

    aggregate                      shift and go to state 82

state 46

    (72) module1_n -> module . module1_n
    (72) module1_n -> . module module1_n
    (73) module1_n -> .
    (74) module -> . moduleKeyword id { grouper_rule1_n }

    aggregateKeyword reduce using rule 73 (module1_n -> .)
    moduleKeyword   shift and go to state 44

    module1_n                      shift and go to state 83
    module                         shift and go to state 46

state 47

    (65) mid_branch -> id arrow . mid_branch
    (65) mid_branch -> . id arrow mid_branch
    (66) mid_branch -> . end_branch
    (67) end_branch -> . id
    (68) end_branch -> . string
